--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
-    <div>
-        <div class="bg-[#eef2f9] h-screen flex  items-center justify-center">
-            <div class="h-160 w-120 md:w-220 shadow-2xl bg-white rounded-2xl flex">
-                <div class="md:mt-18 md:ml-15 mt-15 md:flex w-full ">
-                    <div class="w-full md:w-1/3 flex md:justify-start justify-center md:items-start items-center">
+        <div class="bg-[#eef2f9] w-120 sm:w-full flex sm:h-screen h-270 items-center justify-center">
+            <div class="sm:h-160 h-170 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
+                <div class="sm:mt-18 sm:ml-15 mt-15 sm:flex w-full ">
+                    <div class="w-full sm:w-1/3 flex sm:justify-start justify-center sm:items-start items-center">
                         
-                    <img class="md:h-45 h-35  flex" src="./img/image 1.png" alt="">
+                    <img class="sm:h-45 h-35  flex" src="./img/image 1.png" alt="">
                     </div>
-                    <div class=" flex flex-col w-full md:w-90 md:items-start ml-10 md:m-0">
+                    <div class=" flex flex-col w-full sm:w-90 sm:items-start ml-10 sm:m-0">
                         <div class="text-white bg-[#191847] w-23 h-5 flex justify-center items-center rounded-3xl text-[12px] font-semibold">
                             Free shipping
                         </div>
-                        <div class="text-[24px] mt-2 font-semibold mb-3 md:mb-6">
+                        <div class="text-[24px] mt-2 font-semibold mb-3 sm:mb-6">
                             Razer Kraken Kitty  Edt <br> Gaming Headset Quartz
                         </div>
                         <div class="line-through">
                             1 599,-
                         </div>
-                        <div class="font-bold text-[48px] md:mt-3 mb-2">
+                        <div class="font-bold text-[48px] sm:mt-3 mb-2">
                             799,-
                         </div>
-                        <div class="text-[14px] mb-5 md:mb-7">
+                        <div class="sm:text-[14px] text-[12px] mb-5 sm:mb-7">
                             The offer is valid until April 3 or as long as stock lasts!
                         </div>
-                        <div class="hover:cursor-pointer mb-1 w-98 bg-blue-500 h-12 md;h-15 flex justify-center items-center text-white text-[14px] border rounded-xl">
+                        <div class="hover:cursor-pointer mb-1 sm:w-98 w-40 bg-blue-500 h-12  sm:h-15 flex justify-center items-center text-white text-[14px] border rounded-xl">
                             Add to cart
                         </div>
-                        <div class="flex flex items-center mb-2 md:mb-5">
+                        <div class="flex flex items-center mb-2 sm:mb-5">
                             <div class="h-2 w-2 rounded-full mr-2 bg-green-500 ">
 
                             </div>
@@ -41,9 +40,9 @@
                             50+ pcs. in stock.
                         </div>
                         </div>
-                        <div class="flex gap-3 py-1 md:py-5">
-                            <div class="flex hover:cursor-pointer gap- border border border-gray-400 rounded-lg text-[12px] font-semibold  h-14 w-44 justify-center items-center"><img src="./img/Frame.png" alt=""> Add to cart</div>
-                            <div class="flex hover:cursor-pointer gap-2 border border border-gray-400 rounded-lg text-[12px] font-semibold h-14 w-44 justify-center items-center"><img src="./img/Frame (1).png" alt=""> Add to wishlist</div>
+                        <div class="flex  gap-3 py-1 sm:py-5">
+                            <div class="flex hover:cursor-pointer gap- border border border-gray-400 rounded-lg text-[12px] font-semibold  h-14 w-30 sm:w-44 justify-center items-center justify-center"><img src="./img/Frame.png" alt=""> Add to cart</div>
+                            <div class="flex hover:cursor-pointer gap-2 border border border-gray-400 rounded-lg text-[12px] font-semibold h-14 w-30 sm:w-44 justify-center items-center justify-center pl-2"><img src="./img/Frame (1).png" alt=""> Add to wishlist</div>
                         </div>
                     </div>
                 </div>
