--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   </head>
   <body>
+    <!-- main page -->
         <div class="bg-[#eef2f9] w-120 sm:w-full flex sm:h-screen h-270 items-center justify-center">
             <div class="sm:h-160 h-170 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
                 <div class="sm:mt-18 sm:ml-15 mt-15 sm:flex w-full ">
