--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <!-- main page -->
-        <div class="bg-[#eef2f9] w-120 sm:w-full flex sm:h-screen h-258 items-center justify-center">
-            <div class="sm:h-160 h-170 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
+        <div class="bg-[#eef2f9] w-120 sm:w-full flex sm:h-screen  items-center justify-center">
+            <div class="sm:h-160 mt-35 md:m-0 h-160 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
                 <div class="sm:mt-18 sm:ml-15 mt-15 sm:flex w-full ">
                     <div class="w-full sm:w-1/3 flex sm:justify-start justify-center sm:items-start items-center">
                         
