--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         </div>
                         </div>
                         <div class="flex  gap-3 py-1 sm:py-5">
-                            <div class="flex hover:cursor-pointer gap- border border border-gray-400 rounded-lg text-[12px] font-semibold  h-14 w-30 sm:w-44 justify-center items-center justify-center"><img src="./img/Frame.png" alt=""> Add to cart</div>
-                            <div class="flex hover:cursor-pointer gap-2 border border border-gray-400 rounded-lg text-[12px] font-semibold h-14 w-30 sm:w-44 justify-center items-center justify-center pl-2"><img src="./img/Frame (1).png" alt=""> Add to wishlist</div>
+                            <div class="flex hover:cursor-pointer gap- border border border-gray-400 rounded-lg text-[12px] font-semibold  h-14 w-30 sm:w-44 justify-center items-center justify-center hover:bg-blue-300 pl-2"><img src="./img/Frame.png" alt=""> Add to cart</div>
+                            <div class="flex hover:cursor-pointer gap-2 border border border-gray-400 rounded-lg text-[12px] font-semibold h-14 w-30 sm:w-44 justify-center items-center justify-center hover:bg-blue-300 pl-2"><img src="./img/Frame (1).png" alt=""> Add to wishlist</div>
                         </div>
                     </div>
                 </div>
