--- a/index.html
+++ b/index.html
@@ -7,37 +7,37 @@
   </head>
   <body>
     <!-- main page -->
-        <div class="bg-[#eef2f9] w-120 sm:w-full flex sm:h-screen  items-center justify-center">
-            <div class="sm:h-160 mt-35 md:m-0 h-160 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
-                <div class="sm:mt-18 sm:ml-15 mt-15 sm:flex w-full ">
+        <div class="md:bg-[#eef2f9] sm:w-full flex md:h-screen  items-center justify-center">
+            <div class="sm:h-160 mt-30 md:m-0 ml-10 md:ml-0 h-140 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
+                <div class="sm:mt-18 sm:ml-15 sm:mt-15 sm:flex w-full ">
                     <div class="w-full sm:w-1/3 flex sm:justify-start justify-center sm:items-start items-center">
                         
-                    <img class="sm:h-45 h-35  flex" src="./img/image 1.png" alt="">
+                    <img class="sm:h-45 h-30  flex" src="./img/image 1.png" alt="">
                     </div>
                     <div class=" flex flex-col w-full sm:w-90 sm:items-start ml-10 sm:m-0">
-                        <div class="text-white bg-[#191847] w-23 h-5 flex justify-center items-center rounded-3xl text-[12px] font-semibold">
+                        <div class="text-white bg-[#191847] md:w-23 w-20 h-4 md:h-5 flex justify-center items-center rounded-3xl md:text-[12px] text-[10px] font-semibold">
                             Free shipping
                         </div>
-                        <div class="text-[24px] mt-2 font-semibold mb-3 sm:mb-6">
+                        <div class="text-[20px] md:text-[24px] mt-2 font-semibold mb-3 sm:mb-6">
                             Razer Kraken Kitty  Edt <br> Gaming Headset Quartz
                         </div>
                         <div class="line-through">
                             1 599,-
                         </div>
-                        <div class="font-bold text-[48px] sm:mt-3 mb-2">
+                        <div class="font-bold text-[30px] md:text-[48px] sm:mt-3 mb-2">
                             799,-
                         </div>
-                        <div class="sm:text-[14px] text-[12px] mb-5 sm:mb-7">
+                        <div class="sm:text-[14px] text-[10px] mb-5 sm:mb-7">
                             The offer is valid until April 3 or as long as stock lasts!
                         </div>
-                        <div class="hover:cursor-pointer mb-1 sm:w-98 w-40 bg-blue-500 h-12  sm:h-15 flex justify-center items-center text-white text-[14px] border rounded-xl">
+                        <div class="hover:cursor-pointer mb-1 sm:w-98 w-30 bg-blue-500 h-10  sm:h-15 flex justify-center items-center text-white text-[14px] border rounded-xl">
                             Add to cart
                         </div>
                         <div class="flex flex items-center mb-2 sm:mb-5">
                             <div class="h-2 w-2 rounded-full mr-2 bg-green-500 ">
 
                             </div>
-                            <div class="py-2">
+                            <div class="py-1">
                             50+ pcs. in stock.
                         </div>
                         </div>
