--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <!-- main page -->
-        <div class="md:bg-[#eef2f9] sm:w-full flex md:h-screen  items-center justify-center">
+        <div class="md:bg-[#eef2f9]  flex w-screen h-screen  items-center justify-center">
             <div class="sm:h-160 mt-30 md:m-0 ml-10 md:ml-0 h-140 w-100 sm:w-220 shadow-2xl bg-white rounded-2xl flex">
                 <div class="sm:mt-18 sm:ml-15 sm:mt-15 sm:flex w-full ">
                     <div class="w-full sm:w-1/3 flex sm:justify-start justify-center sm:items-start items-center">
